<resources>

    <string name="app_name">Framework for CameraX</string>
    <string name="image_view_description_label">Image View</string>
    <string name="restart">Restart</string>

    <!-- menu strings-->
    <string name="info">Info</string>
    <string name="about_text">About this example</string>
    <string name="intro_message">
        <![CDATA[


            Lorem ipsum ...


        ]]>
    </string>

    <string name="action_settings">Settings</string>
    <string name="action_menu_1">MENU 1</string>
    <string name="action_menu_2">MENU 2</string>


    <!-- UI buttons -->
    <string name="select_btn_label">Select source</string>
    <string name="image_processing_btn_label">Image processing</string>
    <string name="real_time_btn_label">Real Time</string>

    <!-- strings for dialogboxes-->
    <string name="title_dlg_label">New Test Image</string>
    <string name="choose_photos_dlg_label">Choose from Photos</string>
    <string name="take_picture_dlg_label">Take Picture</string>
    <string name="cancel_dlg_label">Cancel</string>

    <string name="camera_toast_msg">You can\'t use object detection example without granting CAMERA permission</string>


</resources>