<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/info"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_1"
        android:orderInCategory="100"
        android:title="@string/action_menu_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_2"
        android:orderInCategory="100"
        android:title="@string/action_menu_2"
        app:showAsAction="never" />

</menu>